# exabgp

./: .coveragerc  .editorconfig  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .pylintrc  .scrutinizer.yml  .travis.yml  ANALYSIS  ASYNC_MIGRATION_PLAN.md  BUGS  CHANGELOG  CHANGELOG.rst  CLAUDE.md  CODING_STYLE.md  CONTRIBUTING.md  COPYRIGHT  CRUSH.md  Dockerfile  Dockerfile.remote  HISTORY.rst  ISSUE_TEMPLATE.md  LICENCE.txt  MIGRATION_PROGRESS.md  MIGRATION_QUICK_START.md  Makefile  PEP8  PHASE_1.1_COMPLETE.md  PROGRESS.md  PR_DESCRIPTION.md  PYPI.rst  README  README.FIRST  README.FIST  README.RFC  README.md  README.rst  ROADMAP  RUFF_STATUS.md  SECTION_MIGRATION_PLAN.md  (+24 more)
.claude/: .AUDIT_2025_11_16.md  BACKPORT.md  CI_TESTING.md  CLI_AUTO_EXPANSION_IMPLEMENTATION.md  CLI_ENHANCED_COMPLETIONS.md  CLI_INTERACTIVE_ENHANCEMENT_STATUS.md  CLI_TESTING_GUIDE.md  CLI_WORK_SUMMARY.md  CODING_STANDARDS.md  COMMUNICATION_STYLE.md  COMPRESSION_PLAN.md  DOCUMENTATION_PLACEMENT_GUIDE.md  DOCUMENTATION_WRITING_GUIDE.md  DUAL_TRANSPORT_API_PLAN.md  DUAL_TRANSPORT_IMPLEMENTATION_SUMMARY.md  EMOJI_GUIDE.md  ERROR_RECOVERY_PROTOCOL.md  ESSENTIAL_PROTOCOLS.md  FILE_NAMING_CONVENTIONS.md  FUNCTIONAL_TEST_ARCHITECTURE.md  FUNCTIONAL_TEST_DEBUGGING_GUIDE.md  FUNCTIONAL_TEST_EDIT.md  GIT_VERIFICATION_PROTOCOL.md  HEALTH_MONITORING_IMPLEMENTATION_PLAN.md  MAGIC_NUMBER_HEX_ANALYSIS.md  MAGIC_NUMBER_MAPPING.md  MANDATORY_REFACTORING_PROTOCOL.md  MANUAL_TESTING_INSTRUCTIONS.md  NEXT_SESSION.md  PACK_METHOD_STANDARDIZATION_STATUS.md  PLANNING_GUIDE.md  PLR2004_FIX_EXAMPLES.md  PLR2004_MAGIC_NUMBERS_REPORT.md  PLR2004_MAGIC_NUMBERS_SUMMARY.md  PRE_FLIGHT_CHECKLIST.md  PROGRESS.md  README.md  RUFF_PROGRESS.md  RUFF_VIOLATIONS.md  SESSION_END_CHECKLIST.md  (+10 more)
.claude/.claude/: settings.local.json
.claude/archive/: NEXT_SESSION.md  PACK_METHOD_STANDARDIZATION_PLAN.md  PR_DESCRIPTION.md  README.md
.claude/async-migration/: MIGRATION_PROGRESS.md  MIGRATION_SUMMARY.md  files_summary.txt
.claude/asyncio-migration/: ASYNC_MODE_COMPLETION_PLAN.md  CURRENT_STATUS.md  HYBRID_IMPLEMENTATION_PLAN.md  MIGRATION_STRATEGY.md  PHASE2_PRODUCTION_VALIDATION.md  PHASE_1_DEEP_DIVE_FINDINGS.md  PHASE_1_DETAILED_PLAN.md  PHASE_2_DETAILED_PLAN.md  PHASE_2_FINAL_DECISION.md  PHASE_2_POC_INTEGRATION_PLAN.md  PHASE_A_COMPLETE.md  PHASE_B_DETAILED_PLAN.md  PHASE_B_PROGRESS_CHECKPOINT.md  (+7 more)
.codegpt/: head
.crush/: crush.db  crush.db-shm  crush.db-wal
.github/: PULL_REQUEST_TEMPLATE_ASYNC_MIGRATION.md
.woodpecker/: functional-testing.yaml  linting.yaml  type-checking.yaml  unit-testing.yaml
QA/: TODO
RFC/: rfc2385.txt  rfc2545.txt  rfc4760.txt  rfc5396.txt  rfc5575.txt
checks/: lint  profile
daemon/: bgp.py  bgpd
data/: exabgp.yang  yang-library-data.json
debian/: NEWS.Debian  README.Debian  README.md  changelog  control  copyright  exabgp-common.install  exabgp.1  exabgp.default  exabgp.dirs  exabgp.env  exabgp.env.example  exabgp.examples  exabgp.init  exabgp.install  exabgp.lintian-overrides  exabgp.maintscript  exabgp.manpages  exabgp.postinst  exabgp.postrm  exabgp.preinst  exabgp.prerm  exabgp.substvars  exabgp.sysusers  exabgp.upstart  gbp.conf  init.d  lintian-brush.conf  python-exabgp.lintian-overrides  python-exabgp.postinst  python-exabgp.prerm  python3-exabgp.lintian-overrides  python3-exabgp.postinst  python3-exabgp.prerm  rules  templates  watch
dev/: exabgp.1  exabgp.conf.5
doc/: CHANGELOG.rst  README.rst  RFC_WIRE_FORMAT_REFERENCE.md  ddos-flowspec.md
docs/: README.md  cli-autocomplete.md
examples/: blackholes.sql
junk/: PATCH-IMPLEMENTATION-GUIDE.md  advice.txt  patch-01-type-hints.patch  patch-02-pytest-integration.patch  patch-03-exception-hierarchy.patch  patch-04-docstring-standards.patch  patch-05-config-validation.patch  patch-06-standard-logging.patch  patch-07-security-improvements.patch  patch-08-code-organization.patch  pyproject.toml
lab/: benchmark_attr_index.py  benchmark_mac_hash.py  benchmark_nexthop_cache.py  benchmark_update_size.py
logo/: Twitter.indd
plan/: README.md  action-enum-refactor.md  addpath-nlri.md  api-command-encoder.md  api-dispatch-refactor.md  api-v6-test.md  api-versioning.md  architecture.md  bgpls-packed-bytes-first.md  buffer-protocol-audit.md  buffer-standardization.md  byte-interning.md  code-quality.md  configuration.md  coverage.md  documentation-review.md  done-action-enum-refactor.md  done-api-group-command.md  done-api-v6-nexthop-removal.md  done-async-suffix-removal.md  done-bgpls-rfc-naming.md  done-buffer-protocol-audit.md  done-claude-code-improvements.md  done-code-docstrings.md  done-code-quality.md  done-comment-cleanup.md  done-fix-ip-reachability-tlv.md  done-fix-resolve-self-deepcopy.md  done-from-settings-conversion.md  done-int-validator-factory.md  done-ip-afi-property.md  done-labeled-unicast-naming.md  done-mypy.md  done-nlri-immutability.md  done-packed-bytes.md  done-rib-testing-comprehensive.md  done-runtime-validation.md  done-tcp-ao-support.md  done-type-safety.md  done-wire-format-validation.md  (+63 more)
qa/: add-path-receive.conf  add-path-sendreceive.conf  requirements.txt  scrutinizer.yml
redhat/: healthcheck.patch  python-exabgp.spec  python-exabgp.spec.git
release/: make
sbin/: clii  exabgp  exabgp-doc-generator  exabmp
scripts/: migrate_bytes_to_buffer.py
test/: configuration.py  data.py  delta.py  flow.py  open.py  protocol.py  structure.py  supervisor.py  table.py  update.py
tests/: .coveragerc  __init__.py  bgpls_test.py  cache_test.py  connection.py  control_test.py  decode_test.py  edge_intelligence_test.py  flow_test.py  l2vpn_test.py  multipath_test.py  neural_plasticity_test.py  nlri_tests.py  notification_test.py  open_test.py  parsing_test.py  protocol.py  quantum_test.py  quick-transport-test.sh  security_test.py  test_bgpls.py  test_communities.py  test_flowspec.py  test_inet.py  test_ipvpn.py  test_operational_nop.py  test_path_attributes.py  test_reactor_signal.py  test_route_refresh.py  test_rtc.py  test_vpls.py
wiki/: FAQ  abnf  examples  flowspec  start
yang/: exabgp.yang  generate
(+2485 files in other folders)
