[metadata]
name = exabgp
author = Thomas Mangin
author_email = thomas.mangin@exa-networks.co.uk
url = https://github.com/Exa-Networks/exabgp
version = attr: exabgp.version.version
description = BGP swiss army knife
long_description = file: doc/README.rst, doc/CHANGELOG.rst
keywords = BGP, ipv4, ipv6, mpls, vpls, flowspec, bgp-ls, SDN, HA, DDOS
license = BSD 3-Clause License
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: System Administrators
	Intended Audience :: Telecommunications Industry
	License :: OSI Approved :: BSD License
	Operating System :: POSIX
	Operating System :: MacOS :: MacOS X
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Internet

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
	setuptools

[options.packages.find]
where = src
exclude =

[options.entry_points]
console_scripts =
    exabgp = exabgp.application.main:main
    exabgpcli = exabgp.application.cli:main
    exabgp-cli = exabgp.application.cli:main
    exabgp-healthcheck = exabgp.application.healthcheck:main

[options.package_data]
* = *.txt, *.rst
